# connect4_nn_trainer

./: .gitignore  Cargo.toml  Generation_452_AI.ron  generation_452_ai.json
src/: main.rs
